tests/ui/lazy-type-alias/inherent-impls-not-nominal.stderr
error[E0118]: no nominal type found for inherent implementation
  --> $DIR/inherent-impls-not-nominal.rs:10:1
   |
LL | impl Alias {}
   | ^^^^^^^^^^ impl requires a nominal type
   |
   = note: either implement a trait on it or create a newtype to wrap it instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0118`.
